Extended definition of  folders path added first handler and test
